# Highload-static-server

./: .gitignore  CMakeLists.txt  Dockerfile  README.md  httptest.py  main.cpp
etc/: httpd.conf
include/: Handler.h  Parser.h  ThreadPool.h
src/: Handler.cpp  Parser.cpp  ThreadPool.cpp
